# amule-remote-qt

./: .clang-tidy  .cppcheck-suppressions  .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  HISTORY.md  README.md
.github/workflows/: release-build.yml  release.yml  static-analysis.yml
app/: CMakeLists.txt  addserverdialog.cpp  addserverdialog.h  downloadtablemodel.cpp  downloadtablemodel.h  i18n.cpp  i18n.h  i18n.qrc  main.cpp  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  preferencespanel.cpp  preferencespanel.h  progressbardelegate.cpp  progressbardelegate.h  resources.qrc  savedsearches.cpp  savedsearches.h  searchfilterproxy.cpp  searchfilterproxy.h  searchpanel.cpp  searchpanel.h  searchresultmodel.cpp  searchresultmodel.h  servertablemodel.cpp  servertablemodel.h  sharedfilemodel.cpp  sharedfilemodel.h  sourcetablemodel.cpp  sourcetablemodel.h  speedgraph.cpp  speedgraph.h
app/i18n/: amule-remote-qt_es.qm  amule-remote-qt_es.ts
core/: CMakeLists.txt
core/ec/: client.cpp  client.h  codec.cpp  codes.h  packet.h  queries.cpp  queries.h  tag.h  worker.cpp  worker.h
core/model/: model.cpp  model.h
docs/adr/: 0001-control-amuled-via-ec-protocol.md  0002-qt6-cpp-cmake-linux-windows.md  0003-decouple-ec-core-from-gui.md  0004-worker-thread-owns-socket.md  0005-ec-wire-format-and-auth.md  0006-settings-and-password-persistence.md  0007-defer-ci-release-pipelines.md
packaging/: amule-remote-qt.desktop
packaging/aur/: .SRCINFO  PKGBUILD  README.md
tests/: CMakeLists.txt  livecreds.h  tst_ecauth.cpp  tst_eccodec.cpp  tst_eclive.cpp  tst_model.cpp  tst_worker.cpp
